--- a/docroot/themes/custom/site/templates/node/list/node--news--list.html.twig
+++ b/docroot/themes/custom/site/templates/node/list/node--news--list.html.twig
@@ -1,4 +1,4 @@
-<article{{ attributes.addClass(classes) }} class="node-teaser">
+<article{{ attributes.addClass(classes) }} class="node-list node-list-news">
     <div class="card card-block">
         <h4 class="card-title">{{ label }}</h4>
         <h6 class="card-subtitle text-muted">
