--- a/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_loader.scss
@@ -1,1 +1,8 @@
+@import 'page-layout';
+@import 'social-icon';
+@import 'header';
+@import 'navigation';
+@import 'pagination';
+@import 'local-action';
 @import 'footer';
+@import 'card';
